# atividocente

./: Aula10_Funções.ipynb  README.md  pyproject.toml
atividocente/: exercicio1.py  exercicio2.py  exercicio3.py  exercicio4.py  exercicio5.py  exercicio6.py  exercicio7.py
notebook/: exercicio1.ipynb  exercicio2.ipynb  exercicio3.ipynb  exercicio4.ipynb  exercicio5.ipynb  exercicio6.ipynb  exercicio7.ipynb
